--- a/listing/www/index.html
+++ b/listing/www/index.html
@@ -71,7 +71,7 @@
                                         <!-- <input type="text" placeholder="New york" class="btn-group2"> -->
                                         <button type="submit" class="btn-form"><span class="icon-magnifier search-icon" onclick="makeCode();"></span>Crear Sala<i class="pe-7s-angle-right"></i></button>
                                         <button type="submit" class="btn-form"><span class="icon-magnifier search-icon" onclick="makeCode();"></span>Escanear QR<i class="pe-7s-angle-right"></i></button>
-                                        <button type="submit" class="btn-form"><span class="icon-magnifier search-icon"></span>Unirse a la Sala<i class="pe-7s-angle-right"></i></button>
+                                        <!-- <button type="submit" class="btn-form"><span class="icon-magnifier search-icon"></span>Unirse a la Sala<i class="pe-7s-angle-right"></i></button> -->
                                     </div>
                                 </form>
                             </div>
