--- a/listing/www/index.html
+++ b/listing/www/index.html
@@ -70,7 +70,8 @@
                                         <input type="text" id="roomname" placeholder="Ingrese el nombre de la sala" class="btn-group1">
                                         <!-- <input type="text" placeholder="New york" class="btn-group2"> -->
                                         <button type="submit" class="btn-form"><span class="icon-magnifier search-icon" onclick="makeCode();"></span>Crear Sala<i class="pe-7s-angle-right"></i></button>
-                                        <button type="submit" class="btn-form"><span class="icon-magnifier search-icon" onclick="makeCode();"></span>Escanear QR<i class="pe-7s-angle-right"></i></button>
+                                        <button type="button" class="btn-form"><span class="icon-magnifier search-icon" onclick="makeCode();"></span>Escanear QR<i class="pe-7s-angle-right"></i></button>
+                                        <!-- <button type="button" class="btn-form">Span</button> -->
                                         <!-- <button type="submit" class="btn-form"><span class="icon-magnifier search-icon"></span>Unirse a la Sala<i class="pe-7s-angle-right"></i></button> -->
                                     </div>
                                 </form>
